Camera Ui Enhancement code changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent" />
 
     <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginBottom="70dp"
+        android:src="@drawable/oval" />
+
+    <ImageView
         android:id="@+id/takePicture"
         android:layout_width="52dp"
         android:layout_height="52dp"
@@ -19,6 +26,45 @@
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_camera"
         android:visibility="visible" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/flipCamera"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="32dp"
+            android:src="@drawable/ic_baseline_flip_camera_android_24"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/cameraEnhance"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="32dp"
+            android:src="@drawable/ic_baseline_camera_enhance_24"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/cameraMessage"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="94dp"
+            android:src="@drawable/ic_baseline_message_24"
+            android:visibility="visible" />
+
+    </LinearLayout>
 
 
 </FrameLayout>
